added scss files

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
-        <link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css">
+        <link rel="stylesheet" src="/styles/resets.css">
+        <link rel="stylesheet" src="/styles/base.css">
+        <link rel="stylesheet" src="/styles/header.css">
+        <link rel="stylesheet" src="/styles/form.css">
+        <link rel="stylesheet" src="/styles/footer.css">
     </head>
 
     <body>
