--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,7 +25,7 @@
   <main>
     <section>
       <form class="" onsubmit="return Client.handleSubmit(event)">
-        <input id="name" type="url" name="url" id="url" placeholder="https://example.com" required>
+        <input id="name" type="url" name="url" id="url" pattern="https://.*" placeholder="https://example.com" required>
         <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
       </form>
     </section>
